<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PanVerification_Fragment">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">



        <ImageView
            android:id="@+id/ic_arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrowback_j"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"/>

        <TextView
            android:id="@+id/txt_Pan_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pan_verification"
            android:textAllCaps="false"
            android:textSize="32sp"
            android:textColor="#231F20"
            android:fontFamily="@font/zilla_slab_bold"
            android:layout_marginTop="@dimen/_9sdp"
            app:layout_constraintTop_toBottomOf="@id/ic_arrow_back"
            app:layout_constraintStart_toStartOf="@id/ic_arrow_back"/>

          <ImageView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:src="@drawable/more_vertical"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="@dimen/_15sdp"
              app:layout_constraintTop_toTopOf="@id/txt_Pan_number"
              app:layout_constraintBottom_toBottomOf="@id/txt_Pan_number"/>



        <EditText
            android:id="@+id/edit_editmb_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_pan"
            android:textColor="#909090"
            android:textColorHint="#909090"
            android:textSize="16sp"
            android:fontFamily="@font/nunito_sans_regular"
            android:textAllCaps="false"
            android:singleLine="true"
            android:paddingStart="@dimen/_14sdp"
            android:paddingVertical="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_19sdp"
            android:background="@drawable/button_bacground"
            android:backgroundTint="#EBEBEB"
            android:layout_marginHorizontal="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@id/txt_Pan_number"/>


        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="@dimen/_22sdp"
            app:layout_constraintTop_toBottomOf="@id/edit_editmb_number"
            app:layout_constraintStart_toStartOf="@id/edit_editmb_number"/>

        <TextView
            android:id="@+id/txt_i_authorize_joymoney"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/i_authorize_joymoney_to_verify_my_pan_details_from_the_authority"
            android:textColor="#686868"
            android:textSize="14sp"
            android:fontFamily="@font/nunito_sans_regular"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="@id/edit_editmb_number"
            app:layout_constraintTop_toTopOf="@id/checkbox"
            app:layout_constraintStart_toEndOf="@id/checkbox"/>


        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/checkbox"
            app:layout_constraintStart_toStartOf="@id/edit_editmb_number"/>

        <TextView
            android:id="@+id/txt_i_authorize_joymoney2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/i_authorize_joymoney_to_check_my_credit_score_from_the_credit_buerue"
            android:textColor="#686868"
            android:textSize="14sp"
            android:fontFamily="@font/nunito_sans_regular"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="@id/edit_editmb_number"
            app:layout_constraintTop_toTopOf="@id/checkbox2"
            app:layout_constraintStart_toEndOf="@id/checkbox"/>


        <TextView
            android:id="@+id/txt_powered_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/powered_by"
            android:textSize="12sp"
            android:textColor="#727272"
            android:fontFamily="@font/nunito_sans_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_220sdp"
            app:layout_constraintTop_toBottomOf="@id/txt_i_authorize_joymoney2"/>

     <ImageView
         android:id="@+id/ic_nsdl"
         android:layout_width="138dp"
         android:layout_height="46dp"
         android:src="@drawable/nsdl_2"
         app:layout_constraintEnd_toEndOf="@id/txt_powered_by"
         app:layout_constraintStart_toStartOf="@id/txt_powered_by"
         app:layout_constraintTop_toBottomOf="@id/txt_powered_by"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bacground"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:gravity="center"
            android:paddingVertical="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:text="@string/allow_amp_continue"
            android:fontFamily="@font/nunito_sans_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@id/ic_nsdl"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>