<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AadharVerification_Captcha_Fragment">


       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">



           <ImageView
               android:id="@+id/ic_arrow_back"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/arrowback_j"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               android:layout_marginTop="@dimen/_15sdp"
               android:layout_marginStart="@dimen/_15sdp"/>


           <androidx.core.widget.NestedScrollView
               android:id="@+id/layout_NestedScrollView"
               app:layout_constraintTop_toBottomOf="@id/ic_arrow_back"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <androidx.constraintlayout.widget.ConstraintLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   >



           <TextView
               android:id="@+id/txt_aadhar_verification"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/aadhaar_verification"
               android:textAllCaps="false"
               android:textSize="32sp"
               android:textColor="#231F20"
               android:fontFamily="@font/zilla_slab_bold"
               android:layout_marginTop="@dimen/_9sdp"
               android:layout_marginStart="@dimen/_15sdp"
               app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/more_vertical"
               app:layout_constraintEnd_toEndOf="parent"
               android:layout_marginEnd="@dimen/_15sdp"
               app:layout_constraintTop_toTopOf="@id/txt_aadhar_verification"
               app:layout_constraintBottom_toBottomOf="@id/txt_aadhar_verification"/>



           <EditText
               android:id="@+id/edit_editmb_number"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/enter_aadhar_number"
               android:textColor="#909090"
               android:textColorHint="#909090"
               android:textSize="16sp"
               android:fontFamily="@font/nunito_sans_regular"
               android:textAllCaps="false"
               android:singleLine="true"
               android:paddingStart="@dimen/_14sdp"
               android:paddingVertical="@dimen/_12sdp"
               android:layout_marginTop="@dimen/_19sdp"
               android:background="@drawable/button_bacground"
               android:backgroundTint="#EBEBEB"
               android:layout_marginHorizontal="@dimen/_15sdp"
               app:layout_constraintTop_toBottomOf="@id/checkbox"/>


           <CheckBox
               android:id="@+id/checkbox"
               android:layout_width="20dp"
               android:layout_height="20dp"
               android:layout_marginTop="@dimen/_20sdp"
               app:layout_constraintTop_toBottomOf="@id/txt_aadhar_verification"
               app:layout_constraintStart_toStartOf="@id/txt_aadhar_verification"/>

           <TextView
               android:id="@+id/txt_same_as_linked"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/same_as_linked_to_my_aadhaar"
               android:textAllCaps="false"
               android:textColor="#686868"
               android:textSize="16sp"
               android:fontFamily="@font/nunito_sans_regular"
               android:layout_marginStart="@dimen/_9sdp"
               app:layout_constraintTop_toTopOf="@id/checkbox"
               app:layout_constraintStart_toEndOf="@id/checkbox"
               app:layout_constraintBottom_toBottomOf="@id/checkbox"/>



              <TextView
                  android:id="@+id/txt_we_don_t_save"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="14sp"
                  android:text="@string/we_don_t_save_your_aadhaar_number"
                  android:textColor="#004DC0"
                  android:textAllCaps="false"
                  android:fontFamily="@font/nunito_sans_regular"
                  android:layout_marginTop="@dimen/_8sdp"
                  app:layout_constraintTop_toBottomOf="@id/edit_editmb_number"
                  app:layout_constraintStart_toStartOf="@id/edit_editmb_number"/>

                <ImageView
                    android:id="@+id/ic_captcha"
                    android:layout_width="131dp"
                    android:layout_height="61dp"
                    android:src="@drawable/image_4"
                    android:layout_marginTop="@dimen/_32sdp"
                    app:layout_constraintStart_toStartOf="@id/txt_we_don_t_save"
                    app:layout_constraintTop_toBottomOf="@+id/txt_we_don_t_save"/>


             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/refresh_black_24dp_1"
                 android:background="@drawable/refresh_drawable"
                 android:layout_marginStart="@dimen/_18sdp"
                 android:padding="@dimen/_7sdp"
                 app:layout_constraintTop_toTopOf="@id/ic_captcha"
                 app:layout_constraintBottom_toBottomOf="@id/ic_captcha"
                 app:layout_constraintStart_toEndOf="@id/ic_captcha"/>


           <EditText
               android:id="@+id/edit_enter_captcha"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/enter_captcha"
               android:textColor="#909090"
               android:textColorHint="#909090"
               android:textSize="16sp"
               android:fontFamily="@font/nunito_sans_regular"
               android:textAllCaps="false"
               android:singleLine="true"
               android:paddingStart="@dimen/_14sdp"
               android:paddingVertical="@dimen/_12sdp"
               android:layout_marginTop="@dimen/_21sdp"
               android:background="@drawable/button_bacground"
               android:backgroundTint="#EBEBEB"
               android:layout_marginHorizontal="@dimen/_15sdp"
               app:layout_constraintTop_toBottomOf="@id/ic_captcha"/>


           <CheckBox
               android:id="@+id/checkbox2"
               android:layout_width="20dp"
               android:layout_height="20dp"
               android:layout_marginTop="@dimen/_150sdp"
               app:layout_constraintStart_toStartOf="@id/edit_enter_captcha"
               app:layout_constraintTop_toBottomOf="@id/edit_enter_captcha"/>

             <TextView
                 android:id="@+id/txt_i_authorize"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textAllCaps="false"
                 app:layout_constraintTop_toTopOf="@id/checkbox2"
                 android:layout_marginEnd="@dimen/_15sdp"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:text="@string/i_authorize_joymoney_to_verify_and_fetch_my_aadhaar_details_from_uidai"
                 app:layout_constraintStart_toEndOf="@id/checkbox2"
                 app:layout_constraintEnd_toEndOf="parent"/>


           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/button_bacground"
               android:textColor="@color/white"
               android:textSize="18sp"
               android:textAllCaps="false"
               android:gravity="center"
               android:paddingVertical="@dimen/_12sdp"
               android:layout_marginTop="@dimen/_20sdp"
               android:layout_marginHorizontal="@dimen/_15sdp"
               android:text="@string/submit"
               android:fontFamily="@font/nunito_sans_bold"
               app:layout_constraintBottom_toBottomOf="parent"
               android:layout_marginBottom="@dimen/_15sdp"
               app:layout_constraintTop_toBottomOf="@id/txt_i_authorize"/>


               </androidx.constraintlayout.widget.ConstraintLayout>


           </androidx.core.widget.NestedScrollView>

       </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>